# FOMOSv2-CLtest

./: .gitignore  CMakeLists.txt  README.md  deleteCompiledFiles.sh  main.c  setup.c  setup.sh
CL/: main.c  usrLogin  usrLogin.c
FOMOSCL/: run.sh  start.c
FOMOSCL/CL/: main.c
FOMOSCL/Fopen/: Fopen.c
FOMOSCL/helpFiles/: netConnect.txt  problems.txt
FOMOSCL/iwi/: iwiUpdate.sh
FOMOSCL/power/: restart.c
FOMOSCL/startup/: CompileFOMOSCL.sh  StartCL.sh
FOMOSCL/usrNam/: usrNam.c
headerFiles/: usrNam.h
helpFiles/: FOMOSCL.txt  commands.txt  help.c  powerOff.txt
install/: install.c  install.sh
iwi/: iwi.c  iwiInstall.sh  iwiUpdate.sh
multiboot/hello-world/: Makefile  OS.txt  main.c
multiboot/hello-world/iso/boot/grub/: grub.cfg
multiboot/osdev/: Makefile  kernal.c
netConnect/: connect2Network.sh
power/: CMakeLists.txt  powerOff.c
rndmstf/: rndmstf
startup/: CompileFOMOSCL.sh  StartCL.sh  boot.S  kernal.c  multiboot.h  start.c  start.s  startFOMOSCL.c
testBIOS/: README.md  clean.sh  entry.S  main.c  run.sh  strtFOMOS.sh
time/: 12hrTime.c  24hrTime.c
usrNam/: usrNam.c
